修改启动脚本. 无法导入自建的项目. 在windows下面的git bash，就是会报错.......... 但是，在windows下面的IDEA，就是正常的........
未来再找机会研究吧，找一台linux试试看.
先在IDEA里启动